try to modularize section base styling to prevent repeating code on later sections, change li:hover on mobile res sideBar

--- a/src/App.scss
+++ b/src/App.scss
@@ -163,3 +163,29 @@
 
 
 
+section{
+  width: 100%;
+  padding: 10vh 20px 20px 20px;
+
+}
+
+@media screen and (min-width: 770px) {
+  section {
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 25vh 0  25vh 0;
+  
+  }
+  
+}
+
+@media screen and (min-width: 950px) {
+  section {
+      max-width: 920px;
+  }
+  
+}
+
+
+
