--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -83,7 +83,7 @@ nav {
          
       }
       li:hover{
-        background-color: rgba(157, 156, 156, 0.252);
+        background-color: rgba(173, 173, 173, 0.898);
         color: $accentColor;
       }
     }
