--- a/src/sections/Home/Hero.scss
+++ b/src/sections/Home/Hero.scss
@@ -3,13 +3,15 @@
 section.heroSection{
     font-family: 'Work Sans', sans-serif;
     height: 97vh;
-    width: 100%;
+    //width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 10vh 20px 20px 20px;
+    //padding: 10vh 20px 20px 20px;
     gap: 3vh;
     justify-items: center;
+    letter-spacing: 1.2px;
+
     
     h1.hiMyNameIs{
         color:$accentColor;
@@ -17,16 +19,18 @@ section.heroSection{
         text-align: left;
         margin-left: 2.3px;
         font-weight: 600;
+
     }
     h1.kurtisIvey{
         color: whitesmoke;
         font-size: 2.6rem;
         font-weight: 600;
         letter-spacing: 3px;
+
     }
     h1.typeWriterText{
         font-size: 1.8rem;
-        font-weight: 400;
+        font-weight: 600;
         color: rgb(199, 199, 199);
     }
    
@@ -36,19 +40,13 @@ section.heroSection{
         text-align: left;
         font-size: 1.1rem;
         font-weight: 500;
-        letter-spacing: 1.2px;
-        line-height: 24px;
+        line-height: 30px;
         margin-left: 1px;
     }
 }
 
 @media screen and (min-width: 770px) {
-    section.heroSection {
-        max-width: 700px;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 25vh 0  25vh 0;
-        
+    section.heroSection {     
         h1.hiMyNameIs{
             font-size: 1.5rem;
             margin-left: 3.5px;
@@ -71,7 +69,6 @@ section.heroSection{
 }
 @media screen and (min-width: 950px) {
     section.heroSection {
-        max-width: 920px;
     }
     
 }
